detected type ahead selection

--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
 <body>
     <div class="bs-example">
 		<h2>Type your favorite car name</h2>
-        <input type="text" class="typeahead tt-query" autocomplete="on" spellcheck="false">
+        <input type="text" class="typeahead tt-query" autocomplete="off" spellcheck="false">
     </div>
 
 
